added table showing the info on carlist

--- a/src/exercise1/styles/style.css
+++ b/src/exercise1/styles/style.css
@@ -25,3 +25,10 @@
     margin: 0.5ch;
     flex: 1;
 }
+
+#carList{
+    text-align: left;
+    min-width: 20ch;
+
+    list-style-position: inside;
+}
