--- a/src/exercise1/styles/style.css
+++ b/src/exercise1/styles/style.css
@@ -1,3 +1,18 @@
+.App {
+  text-align: center;
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
 .headerBox{
     color: aqua;
 }
@@ -5,6 +20,7 @@
 .counterBox{
     min-height: 5ch;
     min-width: 16ch;
+    max-width: 100ch;
     background-color: white;
     display: flex;
     flex-direction: row;
@@ -29,6 +45,5 @@
 #carList{
     text-align: left;
     min-width: 20ch;
-
     list-style-position: inside;
 }
