removed unnessesary app.css

--- a/src/exercise1/styles/style.css
+++ b/src/exercise1/styles/style.css
@@ -1,3 +1,7 @@
+/*
+.App & .App-header are from the react's App.css, copied here to make the site look a bit nicer 
+*/
+
 .App {
   text-align: center;
 }
