--- a/src/exercise2/styles/style.css
+++ b/src/exercise2/styles/style.css
@@ -9,3 +9,34 @@
 .border{
     border: solid red 1px;
 }
+
+#dropbtn{
+    cursor: pointer;
+}
+
+#dropbtn:hover, #dropbtn:focus{
+    background-color: darkgray
+}
+
+#dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content{
+    display: block;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Buttons inside the dropdown */
+.dropdown-content button {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
