--- a/src/exercise2/styles/style.css
+++ b/src/exercise2/styles/style.css
@@ -10,8 +10,30 @@
     border: solid red 1px;
 }
 
+/*The 3 inputs for the user to fill*/
+#inputFields{
+    box-sizing: border-box;
+    background-color: khaki;
+
+    border: black solid 2px;
+    padding: 1ch;
+    width: 20ch;
+}
+
+.textInput {
+    position: relative;
+    width: 20ch;
+}
+
 #dropbtn{
+    position: relative;
+    box-sizing: border-box;
     cursor: pointer;
+    width: 20ch;
+    border: grey solid 1px;
+    background-color: white;
+    margin-top: 0.5ch;
+    padding: 0.5ch;
 }
 
 #dropbtn:hover, #dropbtn:focus{
@@ -20,23 +42,32 @@
 
 #dropdown {
     position: relative;
-    display: inline-block;
 }
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content{
     display: block;
+    box-sizing: border-box;
     position: absolute;
     background-color: #f1f1f1;
-    min-width: 160px;
+    min-width: 20ch;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 /* Buttons inside the dropdown */
-.dropdown-content button {
+.listbtn{
     color: black;
-    padding: 12px 16px;
+    border: none;
+    background-color: white;
+    width: 100%;
     text-decoration: none;
     display: block;
+    padding: 0.5ch;
+}
+
+.listbtn:hover {
+    cursor: pointer;
+    background-color: lightblue;
+    padding: 1ch;
 }
