--- a/src/exercise2/styles/style.css
+++ b/src/exercise2/styles/style.css
@@ -35,6 +35,7 @@
     margin-top: 0.5ch;
     padding: 0.5ch;
     text-align: left;
+    border-radius: 0.5ch;
 }
 
 #dropbtn:hover{
@@ -84,4 +85,17 @@
     margin-top: 0.5ch;
     width: 50%;
     cursor: pointer;
+}
+
+#messagebox {
+    position: absolute;
+    margin-left: 45%;
+    margin-right: 45%;
+    width: 20%;
+    max-width: 30ch;
+    min-height: 10ch;
+    text-align: center;
+    border: solid black 2px;
+    border-radius: 1ch;
+    padding: 1ch;
 }
